@@ -146,7 +146,8 @@ namespace OpenBabel
     _parent(mol), _ptr(_parent->GetAtom(StartIndex))
   {
     _notVisited.Resize(_parent->NumAtoms());
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx() - 1);
 
@@ -164,7 +165,8 @@ namespace OpenBabel
     _parent(&mol), _ptr(_parent->GetAtom(StartIndex))
   {
     _notVisited.Resize(_parent->NumAtoms());
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx() - 1);
 
@@ -284,9 +286,8 @@ namespace OpenBabel
     _parent(mol), _ptr(_parent->GetAtom(StartIndex))
   {
     _notVisited.Resize(_parent->NumAtoms());
-    if (!_ptr)
-      return;
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx() - 1);
 
@@ -309,9 +310,8 @@ namespace OpenBabel
     _parent(&mol), _ptr(_parent->GetAtom(StartIndex))
   {
     _notVisited.Resize(_parent->NumAtoms());
-    if (!_ptr)
-      return;
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx() - 1);
 
@@ -449,9 +449,8 @@ namespace OpenBabel
     _parent(mol), _ptr(_parent->GetBond(StartIndex))
   {
     _notVisited.Resize(_parent->NumBonds());
-    if (!_ptr)
-      return;
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx());
 
@@ -481,7 +480,8 @@ namespace OpenBabel
     _parent(&mol), _ptr(_parent->GetBond(StartIndex))
   {
     _notVisited.Resize(_parent->NumBonds());
-    _notVisited.Negate(); // all on
+    _notVisited.SetRangeOn(0, _parent->NumBonds() - 1);
+
     if (!_ptr) return;
     _notVisited.SetBitOff(_ptr->GetIdx());
     
